fix overlapping issue

--- a/src/components/pokemons.scss
+++ b/src/components/pokemons.scss
@@ -4,7 +4,9 @@
   margin-top: 20px;
   display: flex;
   flex-wrap: wrap;
+  align-content: space-around;
   justify-content: center;
+  height: 100%;
 }
 
 .pokemon {
