--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@ body {
   background-attachment: fixed;
   height: 100vh;
   font-family: 'Spartan', sans-serif;
-  font-size: 16px;
+  font-size: 1.5rem;
   color: theme.$primary-color;
   display: flex;
   flex-direction: column;
